# iridia

./: .gitignore  Li2B4O7.cif  README.md  __init__.py  build.py  charge.py  dynb.py  energy.py  force.py  main.py  pqeq.ipynb  pqeq.py  pyproject.toml  rtest.py  test.py
absorb/: __init__.py  cross.py  dSpectrum.py  dipoles.py  dspectrum.py  ir.py  main.py  vspect.py
docs/: vibrations.md
iridia/: __init__.py  build.py  ir.py  main.py
iridia/absorb/: __init__.py  cross.py  dipoles.py  dspectrum.py  main.py
iridia/pqeq/: __init__.py  auto.py  charge.py  energy.py  force.py  main.py  pqeq.py  qeq.py
iridia/pqeq/params/: PQEqParams1.csv
iridia/vibrations/: __init__.py  autohess.py  hess.py  main.py  vdos.py  vparts.py
iridia/visualize/: __init__.py  actoms.py  main.py  vplot.py  vspect.py
pqeq/: __init__.py  charge.py  energy.py  force.py  main.py  pqeq.py
pqeq/params/: PQEqParams2.csv
resources/arrays/: wollastonite.npy
resources/atoms/: W3O9.sdf  stilbiteCA.cif
resources/params/: PQEqParams0.csv  PQEqParams1.csv  PQEqParams3.csv
resources/relaxed/: LiB.cif  NaCl.cif  alphaCristobalite.cif  andalusite.cif  betaCristobalite.cif  clinoptilolite.cif  danburite.cif  diopside.cif  olivineMG2.cif  stilbiteCA.cif  tanzanite.cif  wollastonite.cif  zirconium.cif
vibrations/: __init__.py  build.py  hess.py  main.py  vdos.py  vparts.py  vplot.py
visualization/: animate.py  vplot.py
visualize/: animate.py  main.py  vis3d.py  vplot.py  vspect.py
