[project]
name = "iridia"
version = "1.0"
authors = [
  { name = "Lennon McClanahan", email = "lenpcmc@gmail.com" },
  { name = "Collin Wilkinson", email = "wilkinsonc@alfred.edu" },
]
maintainers = [
  { name = "Lennon McClanahan", email = "lenpcmc@gmail.com" }
]
description = "A toolkit for predicting IR Absorbance Spectra"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lenpcmc/iridia"
Issues = "https://github.com/lenpcmc/iridia/issues"
