[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iridia"
version = "1.0"
authors = [
  { name = "Lennon McClanahan", email = "lenpcmc@gmail.com" },
  { name = "Collin Wilkinson", email = "wilkinsonc@alfred.edu" },
]
maintainers = [
  { name = "Lennon McClanahan", email = "lenpcmc@gmail.com" }
]
description = "A toolkit for predicting IR Absorbance Spectra"
readme = "README.md"
requires-python = ">= 3.7"
dependencies = [
  "ase >= 3.23.0",
  "cython >= 3",
  "numpy >= 1.26, < 2.0",
  "chgnet >= 0.3.0",
  "torch >= 1.11.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lenpcmc/iridia"
Issues = "https://github.com/lenpcmc/iridia/issues"

[tool.setuptools.packages]
find = { include = ["iridia*"] }

[tool.setuptools.package-data]
"*" = ["*.csv"]
